--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -70,7 +70,7 @@
 			<span>[[_errorAlertStart]]</span><a is="d2l-link" href="javascript:window.location.reload(true)">[[localize('refreshAndTryAgain')]]</a><span>[[_errorAlertEnd]]</span>
 		</d2l-alert>
 	</template>
-	<script src="https://s.brightspace.com/lib/siren-parser/6.0.0/siren-parser.js"></script>
+	<script src="https://s.brightspace.com/lib/siren-parser/6.1.0/siren-parser-global.js"></script>
 	<script src="../../fetch/fetch.js"></script>
 	<script>
 		'use strict';
