US89636 - User can change banner image from existing menu

--- a/src/d2l-image-banner-overlay-styles.html
+++ b/src/d2l-image-banner-overlay-styles.html
@@ -14,6 +14,9 @@
 				word-wrap: break-word; /* IE/Edge */
 				overflow-wrap: break-word; /* replaces 'word-wrap' in Firefox, Chrome, Safari */
 			}
+			:host[image-selector-open] {
+				z-index: 1000;
+			}
 
 			.d2l-image-banner-overlay-content {
 				overflow: hidden;
