--- a/src/localize-behavior.html
+++ b/src/localize-behavior.html
@@ -36,7 +36,9 @@
 								'undo': 'Undo',
 								'closeAlert': 'Close Alert',
 								'somethingWentWrong': 'Oops! Something went wrong. {placeholder}.',
-								'refreshAndTryAgain': 'Refresh and try again'
+								'refreshAndTryAgain': 'Refresh and try again',
+								'changeImage': 'Change Image',
+								'closeSimpleOverlayAltText' : 'Close Dialog'
 							},
 							'ar': {
 								'removeBanner': 'إزالة هذا الشعار',
@@ -46,7 +48,9 @@
 								'undo': 'تراجع',
 								'closeAlert': 'إغلاق التنبيه',
 								'somethingWentWrong': 'عذرًا! حدث خطأ ما. {placeholder}.',
-								'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى'
+								'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى',
+								'changeImage': 'تغيير الصورة',
+								'closeSimpleOverlayAltText': 'إغلاق مربع الحوار'
 							},
 							'de': {
 								'removeBanner': 'Dieses Banner entfernen',
@@ -56,7 +60,9 @@
 								'undo': 'Rückgängig',
 								'closeAlert': 'Benachrichtigung schließen',
 								'somethingWentWrong': 'Hoppla! Etwas ist schief gelaufen. {placeholder}.',
-								'refreshAndTryAgain': 'Aktualisieren und erneut versuchen.'
+								'refreshAndTryAgain': 'Aktualisieren und erneut versuchen.',
+								'changeImage': 'Bild ändern',
+								'closeSimpleOverlayAltText': 'Dialogfeld schließen'
 							},
 							'es': {
 								'removeBanner': 'Eliminar este banner',
@@ -66,7 +72,9 @@
 								'undo': 'Deshacer',
 								'closeAlert': 'Alerta de cierre',
 								'somethingWentWrong': 'Algo salió mal. {placeholder}.',
-								'refreshAndTryAgain': 'Actualice e inténtelo de nuevo'
+								'refreshAndTryAgain': 'Actualice e inténtelo de nuevo',
+								'changeImage': 'Cambiar imagen',
+								'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo'
 							},
 							'fr': {
 								'removeBanner': 'Supprimer cette bannière',
@@ -76,7 +84,9 @@
 								'undo': 'Annuler',
 								'closeAlert': 'Fermer l\'alerte',
 								'somethingWentWrong': 'Oups! Un problème est survenu. {placeholder}.',
-								'refreshAndTryAgain': 'Actualisez la page et réessayez'
+								'refreshAndTryAgain': 'Actualisez la page et réessayez',
+								'changeImage': 'Modifier l\'image',
+								'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue'
 							},
 							'ja': {
 								'removeBanner': 'このバナーを削除',
@@ -86,7 +96,9 @@
 								'undo': '元に戻す',
 								'closeAlert': 'アラートを閉じる',
 								'somethingWentWrong': '問題が発生しました。{placeholder}。',
-								'refreshAndTryAgain': '更新してから、もう一度お試しください'
+								'refreshAndTryAgain': '更新してから、もう一度お試しください',
+								'changeImage': 'イメージの変更',
+								'closeSimpleOverlayAltText': 'ダイアログを閉じる'
 							},
 							'ko': {
 								'removeBanner': '이 배너 제거',
@@ -96,7 +108,9 @@
 								'undo': '실행 취소',
 								'closeAlert': '경보 닫기',
 								'somethingWentWrong': '문제가 발생했습니다. {placeholder}.',
-								'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.'
+								'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.',
+								'changeImage': '',
+								'closeSimpleOverlayAltText': '대화 상자 닫기'
 							},
 							'nl': {
 								'removeBanner': 'Deze banner verwijderen',
@@ -106,7 +120,9 @@
 								'undo': 'Ongedaan maken',
 								'closeAlert': 'Waarschuwing sluiten',
 								'somethingWentWrong': 'Oeps! Er is iets fout gegaan. {placeholder}.',
-								'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw'
+								'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
+								'changeImage': '이미지 변경',
+								'closeSimpleOverlayAltText': 'Dialoogvenster sluiten'
 							},
 							'pt': {
 								'removeBanner': 'Remover este Banner',
@@ -116,7 +132,9 @@
 								'undo': 'Desfazer',
 								'closeAlert': 'Fechar Alerta',
 								'somethingWentWrong': 'Opa! Algo deu errado. {placeholder}.',
-								'refreshAndTryAgain': 'Atualizar e tentar novamente'
+								'refreshAndTryAgain': 'Atualizar e tentar novamente',
+								'changeImage': 'Alterar imagem',
+								'closeSimpleOverlayAltText': 'Fechar o diálogo'
 							},
 							'sv': {
 								'removeBanner': 'Ta bort banner',
@@ -126,7 +144,9 @@
 								'undo': 'Ångra',
 								'closeAlert': 'Stängningsvarning',
 								'somethingWentWrong': 'Hoppsan! Något gick fel. {placeholder}.',
-								'refreshAndTryAgain': 'Uppdatera och försök igen'
+								'refreshAndTryAgain': 'Uppdatera och försök igen',
+								'changeImage': 'Ändra bild',
+								'closeSimpleOverlayAltText': 'Stäng dialogruta'
 							},
 							'tr': {
 								'removeBanner': 'Bu Başlığı Sil',
@@ -136,7 +156,9 @@
 								'undo': 'Geri Al',
 								'closeAlert': 'Kapatma Uyarısı',
 								'somethingWentWrong': 'Üzgünüz! Bir sorun oluştu. {placeholder}.',
-								'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin'
+								'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin',
+								'changeImage': 'Görüntüyü Değiştir',
+								'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat'
 							},
 							'zh': {
 								'removeBanner': '删除此标语',
@@ -146,7 +168,9 @@
 								'undo': '撤销',
 								'closeAlert': '关闭警报',
 								'somethingWentWrong': '抱歉！出现错误。{placeholder}.',
-								'refreshAndTryAgain': '请刷新并重试'
+								'refreshAndTryAgain': '请刷新并重试',
+								'changeImage': '更改图像',
+								'closeSimpleOverlayAltText': '关闭对话框'
 							},
 							'zh-tw': {
 								'removeBanner': '移除此橫幅',
@@ -156,7 +180,9 @@
 								'undo': '復原',
 								'closeAlert': '關閉警示',
 								'somethingWentWrong': '糟糕！發生錯誤。{placeholder}。',
-								'refreshAndTryAgain': '請重新整理，並再試一次'
+								'refreshAndTryAgain': '請重新整理，並再試一次',
+								'changeImage': '變更影像',
+								'closeSimpleOverlayAltText': '關閉對話方塊'
 							}
 						};
 
