removing Bower dependencies that aren't used

--- a/src/d2l-image-banner-overlay-styles.html
+++ b/src/d2l-image-banner-overlay-styles.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../d2l-colors/d2l-colors.html">
 <link rel="import" href="../../d2l-typography/d2l-typography-shared-styles.html">
 
 <dom-module id="d2l-image-banner-overlay-styles">
