using d2l-localize-behavior

--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -123,7 +123,7 @@
 				_nextImage: Object // when changing the banner image, the next image to show
 			},
 			behaviors: [
-				window.D2L.ImageBanner.LocalizeBehavior,
+				D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior,
 				window.D2L.Hypermedia.OrganizationHMBehavior
 			],
 			listeners: {
