--- a/src/localize-behavior.html
+++ b/src/localize-behavior.html
@@ -1,203 +1,170 @@
-<link rel="import" href="../../app-localize-behavior/app-localize-behavior.html">
+<link rel="import" href="../../d2l-localize-behavior/d2l-localize-behavior.html">
 
 <script>
-	'use strict';
+	window.D2L = window.D2L || {};
+	window.D2L.PolymerBehaviors = window.D2L.PolymerBehaviors || {};
+	window.D2L.PolymerBehaviors.ImageBanner = window.D2L.PolymerBehaviors.ImageBanner || {};
 
-	(function() {
-		window.D2L = window.D2L || {};
-		window.D2L.ImageBanner = window.D2L.ImageBanner || {};
-
-		/*
-		* Behavior for elements that require localization, based on `app-localize-behavior`
-		* @polymerBehavior window.D2L.ImageBanner.LocalizeBehavior
-		*/
-		window.D2L.ImageBanner.LocalizeBehaviorImpl = {
-			properties: {
-				language: {
-					type: String,
-					computed: '_determineLanguage(locale, resources)'
-				},
-				locale: {
-					type: String,
-					value: function() {
-						return document.documentElement.lang
-							|| document.documentElement.getAttribute('data-lang-default')
-							|| 'en-us';
-					}
-				},
-				resources: {
-					value: function() {
-						var langs = {
-							'en': {
-								'removeBanner': 'Remove This Banner',
-								'bannerSettings': 'Banner Settings',
-								'bannerRemoved': 'Banner removed! You can re-enable the banner in {placeholder}.',
-								'courseOfferingInformation': 'Course Offering Information',
-								'undo': 'Undo',
-								'somethingWentWrong': 'Oops! Something went wrong. {placeholder}.',
-								'refreshAndTryAgain': 'Refresh and try again',
-								'changeImage': 'Change Image',
-								'closeSimpleOverlayAltText' : 'Close Dialog'
-							},
-							'ar': {
-								'removeBanner': 'إزالة هذا الشعار',
-								'bannerSettings': 'إعدادات الشعار',
-								'bannerRemoved': 'تمت إزالة الشعار! يمكنك إعادة تمكين الشعار في {placeholder}.',
-								'courseOfferingInformation': 'معلومات مضمون المقرر التعليمي',
-								'undo': 'تراجع',
-								'somethingWentWrong': 'عذرًا! حدث خطأ ما. {placeholder}.',
-								'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى',
-								'changeImage': 'تغيير الصورة',
-								'closeSimpleOverlayAltText': 'إغلاق مربع الحوار'
-							},
-							'de': {
-								'removeBanner': 'Dieses Banner entfernen',
-								'bannerSettings': 'Banner-Einstellungen',
-								'bannerRemoved': 'Banner entfernt! Sie können das Banner unter {placeholder} wieder aktivieren.',
-								'courseOfferingInformation': 'Informationen zum Kursangebot',
-								'undo': 'Rückgängig',
-								'somethingWentWrong': 'Hoppla! Etwas ist schief gelaufen. {placeholder}.',
-								'refreshAndTryAgain': 'Aktualisieren und erneut versuchen.',
-								'changeImage': 'Bild ändern',
-								'closeSimpleOverlayAltText': 'Dialogfeld schließen'
-							},
-							'es': {
-								'removeBanner': 'Eliminar este banner',
-								'bannerSettings': 'Configuración del banner',
-								'bannerRemoved': 'Banner eliminado. Puede volver a habilitar el banner en {placeholder}.',
-								'courseOfferingInformation': 'Información de oferta de cursos',
-								'undo': 'Deshacer',
-								'somethingWentWrong': 'Algo salió mal. {placeholder}.',
-								'refreshAndTryAgain': 'Actualice e inténtelo de nuevo',
-								'changeImage': 'Cambiar imagen',
-								'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo'
-							},
-							'fr': {
-								'removeBanner': 'Supprimer cette bannière',
-								'bannerSettings': 'Paramètres de la bannière',
-								'bannerRemoved': 'Bannière supprimée! Vous pouvez la réactiver dans {placeholder}.',
-								'courseOfferingInformation': 'Information sur l\'offre de cours',
-								'undo': 'Annuler',
-								'somethingWentWrong': 'Oups! Un problème est survenu. {placeholder}.',
-								'refreshAndTryAgain': 'Actualisez la page et réessayez',
-								'changeImage': 'Modifier l\'image',
-								'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue'
-							},
-							'ja': {
-								'removeBanner': 'このバナーを削除',
-								'bannerSettings': 'バナー設定',
-								'bannerRemoved': 'バナーが削除されました。{placeholder} でバナーを再度有効にできます。',
-								'courseOfferingInformation': 'コース内容情報',
-								'undo': '元に戻す',
-								'somethingWentWrong': '問題が発生しました。{placeholder}。',
-								'refreshAndTryAgain': '更新してから、もう一度お試しください',
-								'changeImage': 'イメージの変更',
-								'closeSimpleOverlayAltText': 'ダイアログを閉じる'
-							},
-							'ko': {
-								'removeBanner': '이 배너 제거',
-								'bannerSettings': '배너 설정',
-								'bannerRemoved': '배너가 삭제되었습니다. {placeholder}에서 배너를 다시 활성화할 수 있습니다.',
-								'courseOfferingInformation': '개설 강의 정보',
-								'undo': '실행 취소',
-								'somethingWentWrong': '문제가 발생했습니다. {placeholder}.',
-								'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.',
-								'changeImage': '',
-								'closeSimpleOverlayAltText': '대화 상자 닫기'
-							},
-							'nl': {
-								'removeBanner': 'Deze banner verwijderen',
-								'bannerSettings': 'Bannerinstellingen',
-								'bannerRemoved': 'Banner verwijderd! U kunt de banner in {placeholder} opnieuw inschakelen.',
-								'courseOfferingInformation': 'Informatie cursuseditie',
-								'undo': 'Ongedaan maken',
-								'somethingWentWrong': 'Oeps! Er is iets fout gegaan. {placeholder}.',
-								'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
-								'changeImage': '이미지 변경',
-								'closeSimpleOverlayAltText': 'Dialoogvenster sluiten'
-							},
-							'pt': {
-								'removeBanner': 'Remover este Banner',
-								'bannerSettings': 'Configurações de Banner',
-								'bannerRemoved': 'Banner removido! Você pode reativar o banner em {placeholder}.',
-								'courseOfferingInformation': 'Informações de Oferta de Curso',
-								'undo': 'Desfazer',
-								'somethingWentWrong': 'Opa! Algo deu errado. {placeholder}.',
-								'refreshAndTryAgain': 'Atualizar e tentar novamente',
-								'changeImage': 'Alterar imagem',
-								'closeSimpleOverlayAltText': 'Fechar o diálogo'
-							},
-							'sv': {
-								'removeBanner': 'Ta bort banner',
-								'bannerSettings': 'Inställningar för banner',
-								'bannerRemoved': 'Banner borttagen. Du återaktiverar den i {placeholder}.',
-								'courseOfferingInformation': 'Information om kursutbud',
-								'undo': 'Ångra',
-								'somethingWentWrong': 'Hoppsan! Något gick fel. {placeholder}.',
-								'refreshAndTryAgain': 'Uppdatera och försök igen',
-								'changeImage': 'Ändra bild',
-								'closeSimpleOverlayAltText': 'Stäng dialogruta'
-							},
-							'tr': {
-								'removeBanner': 'Bu Başlığı Sil',
-								'bannerSettings': 'Başlık Ayarları',
-								'bannerRemoved': 'Başlık silindi! {placeholder} konumundan başlığı yeniden etkinleştirebilirsiniz.',
-								'courseOfferingInformation': 'Ders Önerisi Bilgileri',
-								'undo': 'Geri Al',
-								'somethingWentWrong': 'Üzgünüz! Bir sorun oluştu. {placeholder}.',
-								'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin',
-								'changeImage': 'Görüntüyü Değiştir',
-								'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat'
-							},
-							'zh': {
-								'removeBanner': '删除此标语',
-								'bannerSettings': '标语设置',
-								'bannerRemoved': '标语已删除！您可以在 {placeholder} 中重新启用此标语。',
-								'courseOfferingInformation': '课程方案信息',
-								'undo': '撤销',
-								'somethingWentWrong': '抱歉！出现错误。{placeholder}.',
-								'refreshAndTryAgain': '请刷新并重试',
-								'changeImage': '更改图像',
-								'closeSimpleOverlayAltText': '关闭对话框'
-							},
-							'zh-tw': {
-								'removeBanner': '移除此橫幅',
-								'bannerSettings': '橫幅設定',
-								'bannerRemoved': '已移除橫幅！您可在 {placeholder} 中重新啟用橫幅。',
-								'courseOfferingInformation': '開課項目資訊',
-								'undo': '復原',
-								'somethingWentWrong': '糟糕！發生錯誤。{placeholder}。',
-								'refreshAndTryAgain': '請重新整理，並再試一次',
-								'changeImage': '變更影像',
-								'closeSimpleOverlayAltText': '關閉對話方塊'
-							}
-						};
-
-						return langs;
-					}
+	/*
+	* @polymerBehavior D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl
+	*/
+	D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl = {
+		properties: {
+			resources: {
+				value: function() {
+					return {
+						'en': {
+							'removeBanner': 'Remove This Banner',
+							'bannerSettings': 'Banner Settings',
+							'bannerRemoved': 'Banner removed! You can re-enable the banner in {placeholder}.',
+							'courseOfferingInformation': 'Course Offering Information',
+							'undo': 'Undo',
+							'somethingWentWrong': 'Oops! Something went wrong. {placeholder}.',
+							'refreshAndTryAgain': 'Refresh and try again',
+							'changeImage': 'Change Image',
+							'closeSimpleOverlayAltText' : 'Close Dialog'
+						},
+						'ar': {
+							'removeBanner': 'إزالة هذا الشعار',
+							'bannerSettings': 'إعدادات الشعار',
+							'bannerRemoved': 'تمت إزالة الشعار! يمكنك إعادة تمكين الشعار في {placeholder}.',
+							'courseOfferingInformation': 'معلومات مضمون المقرر التعليمي',
+							'undo': 'تراجع',
+							'somethingWentWrong': 'عذرًا! حدث خطأ ما. {placeholder}.',
+							'refreshAndTryAgain': 'قم بالتحديث وحاول مرة أخرى',
+							'changeImage': 'تغيير الصورة',
+							'closeSimpleOverlayAltText': 'إغلاق مربع الحوار'
+						},
+						'de': {
+							'removeBanner': 'Dieses Banner entfernen',
+							'bannerSettings': 'Banner-Einstellungen',
+							'bannerRemoved': 'Banner entfernt! Sie können das Banner unter {placeholder} wieder aktivieren.',
+							'courseOfferingInformation': 'Informationen zum Kursangebot',
+							'undo': 'Rückgängig',
+							'somethingWentWrong': 'Hoppla! Etwas ist schief gelaufen. {placeholder}.',
+							'refreshAndTryAgain': 'Aktualisieren und erneut versuchen.',
+							'changeImage': 'Bild ändern',
+							'closeSimpleOverlayAltText': 'Dialogfeld schließen'
+						},
+						'es': {
+							'removeBanner': 'Eliminar este banner',
+							'bannerSettings': 'Configuración del banner',
+							'bannerRemoved': 'Banner eliminado. Puede volver a habilitar el banner en {placeholder}.',
+							'courseOfferingInformation': 'Información de oferta de cursos',
+							'undo': 'Deshacer',
+							'somethingWentWrong': 'Algo salió mal. {placeholder}.',
+							'refreshAndTryAgain': 'Actualice e inténtelo de nuevo',
+							'changeImage': 'Cambiar imagen',
+							'closeSimpleOverlayAltText': 'Cerrar el cuadro de diálogo'
+						},
+						'fr': {
+							'removeBanner': 'Supprimer cette bannière',
+							'bannerSettings': 'Paramètres de la bannière',
+							'bannerRemoved': 'Bannière supprimée! Vous pouvez la réactiver dans {placeholder}.',
+							'courseOfferingInformation': 'Information sur l\'offre de cours',
+							'undo': 'Annuler',
+							'somethingWentWrong': 'Oups! Un problème est survenu. {placeholder}.',
+							'refreshAndTryAgain': 'Actualisez la page et réessayez',
+							'changeImage': 'Modifier l\'image',
+							'closeSimpleOverlayAltText': 'Fermer la boîte de dialogue'
+						},
+						'ja': {
+							'removeBanner': 'このバナーを削除',
+							'bannerSettings': 'バナー設定',
+							'bannerRemoved': 'バナーが削除されました。{placeholder} でバナーを再度有効にできます。',
+							'courseOfferingInformation': 'コース内容情報',
+							'undo': '元に戻す',
+							'somethingWentWrong': '問題が発生しました。{placeholder}。',
+							'refreshAndTryAgain': '更新してから、もう一度お試しください',
+							'changeImage': 'イメージの変更',
+							'closeSimpleOverlayAltText': 'ダイアログを閉じる'
+						},
+						'ko': {
+							'removeBanner': '이 배너 제거',
+							'bannerSettings': '배너 설정',
+							'bannerRemoved': '배너가 삭제되었습니다. {placeholder}에서 배너를 다시 활성화할 수 있습니다.',
+							'courseOfferingInformation': '개설 강의 정보',
+							'undo': '실행 취소',
+							'somethingWentWrong': '문제가 발생했습니다. {placeholder}.',
+							'refreshAndTryAgain': '새로 고친 후 다시 시도하십시오.',
+							'changeImage': '',
+							'closeSimpleOverlayAltText': '대화 상자 닫기'
+						},
+						'nl': {
+							'removeBanner': 'Deze banner verwijderen',
+							'bannerSettings': 'Bannerinstellingen',
+							'bannerRemoved': 'Banner verwijderd! U kunt de banner in {placeholder} opnieuw inschakelen.',
+							'courseOfferingInformation': 'Informatie cursuseditie',
+							'undo': 'Ongedaan maken',
+							'somethingWentWrong': 'Oeps! Er is iets fout gegaan. {placeholder}.',
+							'refreshAndTryAgain': 'Vernieuw en probeer het opnieuw',
+							'changeImage': '이미지 변경',
+							'closeSimpleOverlayAltText': 'Dialoogvenster sluiten'
+						},
+						'pt': {
+							'removeBanner': 'Remover este Banner',
+							'bannerSettings': 'Configurações de Banner',
+							'bannerRemoved': 'Banner removido! Você pode reativar o banner em {placeholder}.',
+							'courseOfferingInformation': 'Informações de Oferta de Curso',
+							'undo': 'Desfazer',
+							'somethingWentWrong': 'Opa! Algo deu errado. {placeholder}.',
+							'refreshAndTryAgain': 'Atualizar e tentar novamente',
+							'changeImage': 'Alterar imagem',
+							'closeSimpleOverlayAltText': 'Fechar o diálogo'
+						},
+						'sv': {
+							'removeBanner': 'Ta bort banner',
+							'bannerSettings': 'Inställningar för banner',
+							'bannerRemoved': 'Banner borttagen. Du återaktiverar den i {placeholder}.',
+							'courseOfferingInformation': 'Information om kursutbud',
+							'undo': 'Ångra',
+							'somethingWentWrong': 'Hoppsan! Något gick fel. {placeholder}.',
+							'refreshAndTryAgain': 'Uppdatera och försök igen',
+							'changeImage': 'Ändra bild',
+							'closeSimpleOverlayAltText': 'Stäng dialogruta'
+						},
+						'tr': {
+							'removeBanner': 'Bu Başlığı Sil',
+							'bannerSettings': 'Başlık Ayarları',
+							'bannerRemoved': 'Başlık silindi! {placeholder} konumundan başlığı yeniden etkinleştirebilirsiniz.',
+							'courseOfferingInformation': 'Ders Önerisi Bilgileri',
+							'undo': 'Geri Al',
+							'somethingWentWrong': 'Üzgünüz! Bir sorun oluştu. {placeholder}.',
+							'refreshAndTryAgain': 'Yenileyin ve tekrar deneyin',
+							'changeImage': 'Görüntüyü Değiştir',
+							'closeSimpleOverlayAltText': 'İletişim Kutusunu Kapat'
+						},
+						'zh': {
+							'removeBanner': '删除此标语',
+							'bannerSettings': '标语设置',
+							'bannerRemoved': '标语已删除！您可以在 {placeholder} 中重新启用此标语。',
+							'courseOfferingInformation': '课程方案信息',
+							'undo': '撤销',
+							'somethingWentWrong': '抱歉！出现错误。{placeholder}.',
+							'refreshAndTryAgain': '请刷新并重试',
+							'changeImage': '更改图像',
+							'closeSimpleOverlayAltText': '关闭对话框'
+						},
+						'zh-tw': {
+							'removeBanner': '移除此橫幅',
+							'bannerSettings': '橫幅設定',
+							'bannerRemoved': '已移除橫幅！您可在 {placeholder} 中重新啟用橫幅。',
+							'courseOfferingInformation': '開課項目資訊',
+							'undo': '復原',
+							'somethingWentWrong': '糟糕！發生錯誤。{placeholder}。',
+							'refreshAndTryAgain': '請重新整理，並再試一次',
+							'changeImage': '變更影像',
+							'closeSimpleOverlayAltText': '關閉對話方塊'
+						}
+					};
 				}
-			},
-			_determineLanguage: function(locale, resources) {
-				locale = locale.toLowerCase();
-
-				if (resources[locale]) {
-					return locale;
-				}
-
-				var langAndRegion = locale.split('-');
-
-				if (resources[langAndRegion[0]]) {
-					return langAndRegion[0];
-				}
-
-				return 'en';
 			}
-		};
+		}
+	};
 
-		/* @polymerBehavior */
-		window.D2L.ImageBanner.LocalizeBehavior = [
-			Polymer.AppLocalizeBehavior,
-			window.D2L.ImageBanner.LocalizeBehaviorImpl
-		];
-	})();
+	/** @polymerBehavior */
+	D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior = [
+		D2L.PolymerBehaviors.LocalizeBehavior,
+		D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl
+	];
 </script>
