--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -174,11 +174,18 @@
 				this.$$('button').focus();
 			},
 			_getOrganizationInfo: function() {
+				var headerOptions = new Headers({
+					Accept: 'application/vnd.siren+json'
+				});
+
+				if (this._organization) {
+					headerOptions.append('pragma', 'no-cache');
+					headerOptions.append('cache-control', 'no-cache');
+				}
+
 				return window.d2lfetch
 					.fetch(new Request(this.organizationUrl, {
-						headers: new Headers({
-							Accept: 'application/vnd.siren+json'
-						})
+						headers: headerOptions
 					}))
 					.then(function(response) {
 						if (response.ok) {
