US93815 - Fix issue from switching to d2l-fetch

--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -324,6 +324,7 @@
 
 				if (this._shouldRefreshCourseImage) {
 					this._refreshCourseImage(organization.getSubEntityByClass('course-image').href);
+					this._refreshCourseImage(this._parseSiren(organization).getSubEntityByClass('course-image').href);
 				}
 			},
 			_refreshCourseImage: function(courseImageApiUrl) {
