Use hybrid version of organization-hm-behavior

--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -138,7 +138,7 @@
 			},
 			behaviors: [
 				D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior,
-				window.D2L.Hypermedia.OrganizationHMBehavior
+				D2L.PolymerBehaviors.Hypermedia.OrganizationHMBehavior
 			],
 			listeners: {
 				'd2l-alert-button-pressed': '_onAlertButtonPressed',
