--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -174,6 +174,9 @@
 				this.$$('button').focus();
 			},
 			_getOrganizationInfo: function() {
+
+				if (!this.organizationUrl) return;
+
 				var headerOptions = new Headers({
 					Accept: 'application/vnd.siren+json'
 				});
