--- a/demo/d2l-image-banner-overlay-demo.html
+++ b/demo/d2l-image-banner-overlay-demo.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 		<title>d2l-image-banner-overlay-demo</title>
-		<script src="../../promise-polyfill/Promise.min.js"></script>
 		<script src="../../fetch/fetch.js"></script>
 		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+		<link rel="import" src="../../promise-polyfill/promise-polyfill-lite.html"></link>
 		<link rel="import" href="../../d2l-typography/d2l-typography.html">
 		<link rel="import" href="../src/d2l-image-banner-overlay.html">
 		<style is="custom-style" include="d2l-typography"></style>
