--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-		<script src="../../promise-polyfill/Promise.min.js"></script>
 		<script src="../../fetch/fetch.js"></script>
 		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 		<script src="../../web-component-tester/browser.js"></script>
+		<link rel="import" src="../../promise-polyfill/promise-polyfill-lite.html"></link>
 	</head>
 	<body>
 		<script>
