--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -148,7 +148,9 @@
 			},
 			attached: function() {
 				this.$['image-selector-threshold'].scrollTarget = this.$['basic-image-selector-overlay'].scrollRegion;
-				this._getOrganizationInfo();
+				if (this.organizationUrl) {
+					this._getOrganizationInfo();
+				}
 			},
 			ready: function() {
 				this._addPerfMark('ready');
@@ -174,8 +176,6 @@
 				this.$$('button').focus();
 			},
 			_getOrganizationInfo: function() {
-
-				if (!this.organizationUrl) return;
 
 				var headerOptions = new Headers({
 					Accept: 'application/vnd.siren+json'
