--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -1,15 +1,15 @@
-<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../d2l-alert/d2l-alert.html">
-<link rel="import" href="../../d2l-dropdown/d2l-dropdown.html">
-<link rel="import" href="../../d2l-dropdown/d2l-dropdown-menu.html">
-<link rel="import" href="../../d2l-fetch/d2l-fetch.html">
-<link rel="import" href="../../d2l-icons/d2l-icons.html">
-<link rel="import" href="../../d2l-image-selector/d2l-basic-image-selector.html">
-<link rel="import" href="../../d2l-link/d2l-link.html">
-<link rel="import" href="../../d2l-loading-spinner/d2l-loading-spinner.html">
-<link rel="import" href="../../d2l-organization-hm-behavior/d2l-organization-hm-behavior.html">
-<link rel="import" href="../../d2l-simple-overlay/d2l-simple-overlay.html">
-<link rel="import" href="../../iron-scroll-threshold/iron-scroll-threshold.html">
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../d2l-alert/d2l-alert.html">
+<link rel="import" href="../d2l-dropdown/d2l-dropdown.html">
+<link rel="import" href="../d2l-dropdown/d2l-dropdown-menu.html">
+<link rel="import" href="../d2l-fetch/d2l-fetch.html">
+<link rel="import" href="../d2l-icons/d2l-icons.html">
+<link rel="import" href="../d2l-image-selector/d2l-basic-image-selector.html">
+<link rel="import" href="../d2l-link/d2l-link.html">
+<link rel="import" href="../d2l-loading-spinner/d2l-loading-spinner.html">
+<link rel="import" href="../d2l-organization-hm-behavior/d2l-organization-hm-behavior.html">
+<link rel="import" href="../d2l-simple-overlay/d2l-simple-overlay.html">
+<link rel="import" href="../iron-scroll-threshold/iron-scroll-threshold.html">
 <link rel="import" href="d2l-image-banner-overlay-styles.html">
 <link rel="import" href="localize-behavior.html">
 
