--- a/demo/index.html
+++ b/demo/index.html
@@ -6,9 +6,9 @@
 		<title>d2l-image-banner-overlay-demo</title>
 		<script src="../../fetch/fetch.js"></script>
 		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-		<link rel="import" src="../../promise-polyfill/promise-polyfill-lite.html"></link>
+		<link rel="import" href="../../promise-polyfill/promise-polyfill-lite.html"></link>
 		<link rel="import" href="../../d2l-typography/d2l-typography.html">
-		<link rel="import" href="../src/d2l-image-banner-overlay.html">
+		<link rel="import" href="../d2l-image-banner-overlay.html">
 		<style is="custom-style" include="d2l-typography"></style>
 		<style>
 			body {
