--- a/test/d2l-image-banner-overlay.html
+++ b/test/d2l-image-banner-overlay.html
@@ -6,8 +6,8 @@
 		<script src="../../fetch/fetch.js"></script>
 		<script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 		<script src="../../web-component-tester/browser.js"></script>
-		<link rel="import" src="../../promise-polyfill/promise-polyfill-lite.html"></link>
-		<link rel="import" href="../src/d2l-image-banner-overlay.html">
+		<link rel="import" href="../../promise-polyfill/promise-polyfill-lite.html"></link>
+		<link rel="import" href="../d2l-image-banner-overlay.html">
 	</head>
 	<body>
 		<test-fixture id="d2l-image-banner-overlay-fixture">
