Close overlay when image is changed
Previously, this was being accomplished by an event listener inside d2l-simple-overlay, but it was specific to this case. So, it will be removed from there, which means we have to explicitly close the overlay when a set-course-image event occurs.

--- a/src/d2l-image-banner-overlay.html
+++ b/src/d2l-image-banner-overlay.html
@@ -205,6 +205,8 @@
 				this.$['image-selector-threshold'].clearTriggers();
 			},
 			_onSetCourseImage: function(e) {
+				this.$['basic-image-selector-overlay'].close();
+
 				var org = this._parseSiren(e.detail.organization);
 				var orgSelfLink = (org.getLinkByRel('self') || {}).href || '';
 
