--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -404,12 +404,23 @@
 			_showAlert: function(show) {
 				Polymer.dom(this.$.overlayContent).classList.remove('loading-overlay-shown');
 
+				// TODO: a couple problems with this
+				// 1. querySelector('.d2l-course-banner-container') won't work if that element is hidden via shadow dom
+				// 2. This is a very leaky abstraction. The fact that these element knows to add
+				//    a CSS class to some arbitrary other element with a CSS class on it isn't great.
+				//    Ideally, it would fire an event, and the other component would be listening for it
+				//    and respond accordingly.
+				var container = document.documentElement.querySelector('.d2l-course-banner-container');
 				if (show) {
 					Polymer.dom(this.$.overlayContent).classList.remove('d2l-image-banner-overlay-content-shown');
-					document.documentElement.querySelector('.d2l-course-banner-container').classList.add('showing-alert');
+					if (container) {
+						container.classList.add('showing-alert');
+					}
 				} else {
 					Polymer.dom(this.$.overlayContent).classList.add('d2l-image-banner-overlay-content-shown');
-					document.documentElement.querySelector('.d2l-course-banner-container').classList.remove('showing-alert');
+					if (container) {
+						container.classList.remove('showing-alert');
+					}
 				}
 			},
 			_onAlertButtonPressed: function(e) {
