demoing fetch error state

--- a/demo/index.html
+++ b/demo/index.html
@@ -33,7 +33,16 @@
 			<demo-snippet>
 				<template>
 					<demo-image-banner-container>
-						<d2l-image-banner-overlay organization-url="/default"></d2l-image-banner-overlay>
+						<d2l-image-banner-overlay organization-url="/default" has-change-image></d2l-image-banner-overlay>
+					</demo-image-banner-container>
+				</template>
+			</demo-snippet>
+
+			<h3>Fetch Error State</h3>
+			<demo-snippet>
+				<template>
+					<demo-image-banner-container>
+						<d2l-image-banner-overlay organization-url="/error"></d2l-image-banner-overlay>
 					</demo-image-banner-container>
 				</template>
 			</demo-snippet>
