--- a/demo/index.html
+++ b/demo/index.html
@@ -32,7 +32,7 @@
 			<h3>Default</h3>
 			<demo-snippet>
 				<template>
-					<demo-image-banner-container>
+					<demo-image-banner-container class="d2l-course-banner-container">
 						<d2l-image-banner-overlay organization-url="/default" has-change-image></d2l-image-banner-overlay>
 					</demo-image-banner-container>
 				</template>
@@ -41,7 +41,7 @@
 			<h3>Fetch Error State</h3>
 			<demo-snippet>
 				<template>
-					<demo-image-banner-container>
+					<demo-image-banner-container class="d2l-course-banner-container">
 						<d2l-image-banner-overlay organization-url="/error"></d2l-image-banner-overlay>
 					</demo-image-banner-container>
 				</template>
