--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../d2l-typography/d2l-typography-shared-styles.html">
 
 <dom-module id="d2l-image-banner-overlay-styles">
-	<template>
+	<template strip-whitespace>
 		<style>
 			:host {
 				height: 100%;
