--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -15,7 +15,7 @@
 <link rel="import" href="localize-behavior.html">
 
 <dom-module id="d2l-image-banner-overlay">
-	<template>
+	<template strip-whitespace>
 		<style include="d2l-image-banner-overlay-styles"></style>
 
 		<div id="overlayContent" class="d2l-image-banner-overlay-content">
