--- a/d2l-image-banner-overlay.html
+++ b/d2l-image-banner-overlay.html
@@ -13,6 +13,11 @@
 <link rel="import" href="../iron-scroll-threshold/iron-scroll-threshold.html">
 <link rel="import" href="d2l-image-banner-overlay-styles.html">
 <link rel="import" href="localize-behavior.html">
+<!--
+`d2l-image-banner-overlay`
+An overlay for course image banners that displays the course name and menu.
+@demo demo/index.html
+-->
 
 <dom-module id="d2l-image-banner-overlay">
 	<template strip-whitespace>
@@ -91,11 +96,28 @@
 		Polymer({
 			is: 'd2l-image-banner-overlay',
 			properties: {
-				courseImageUploadCb: Function, // callback function for d2l-image-selector
-				organizationUrl: String, // url used to request organization information
-				imageCatalogLocation: String, // URL that is called by the widget to fetch results from the course image catalog
-				hasChangeImage: Boolean, // feature flag
-				imageSelectorOpen: { // Temporarily set z-index to 100 so that iron-overlay can work (it is set to 999 at body level)
+				/**
+				 * Callback function for d2l-image-selector
+				 */
+				courseImageUploadCb: Function,
+				/**
+				 * Url used to request organization information
+				 */
+				organizationUrl: String,
+				/**
+				 * URL that is called by the widget to fetch results from the
+				 * course image catalog
+				 */
+				imageCatalogLocation: String,
+				/**
+				 * Whether the "Change Image" menu item is available
+				 */
+				hasChangeImage: Boolean,
+				/**
+				 * Hack: temporarily set z-index to 100 so that iron-overlay can
+				 * work (it is set to 999 at body level).
+				 */
+				imageSelectorOpen: {
 					type: Boolean,
 					value: false,
 					reflectToAttribute: true
@@ -178,6 +200,9 @@
 				}
 				this.focus();
 			},
+			/**
+			 * Places focus inside the overlay.
+			 */
 			focus: function() {
 				this.$$('button').focus();
 			},
