fixing duplicate  behaviour name in docs

--- a/localize-behavior.html
+++ b/localize-behavior.html
@@ -6,8 +6,8 @@
 	window.D2L.PolymerBehaviors.ImageBanner = window.D2L.PolymerBehaviors.ImageBanner || {};
 
 	/*
-	* @polymerBehavior D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl
-	*/
+	 * @polymerBehavior D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior
+	 */
 	D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl = {
 		properties: {
 			resources: {
@@ -162,7 +162,9 @@
 		}
 	};
 
-	/** @polymerBehavior */
+	/*
+	 * @polymerBehavior D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior
+	 */
 	D2L.PolymerBehaviors.ImageBanner.LocalizeBehavior = [
 		D2L.PolymerBehaviors.LocalizeBehavior,
 		D2L.PolymerBehaviors.ImageBanner.LocalizeBehaviorImpl
