--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,15 @@
 				</template>
 			</demo-snippet>
 
+			<h3>No Menu</h3>
+			<demo-snippet>
+				<template>
+					<demo-image-banner-container class="d2l-course-banner-container">
+						<d2l-image-banner-overlay organization-url="/no-menu"></d2l-image-banner-overlay>
+					</demo-image-banner-container>
+				</template>
+			</demo-snippet>
+
 			<h3>Fetch Error State</h3>
 			<demo-snippet>
 				<template>
