--- a/d2l-image-banner-overlay-styles.html
+++ b/d2l-image-banner-overlay-styles.html
@@ -68,18 +68,18 @@
 				@apply --d2l-heading-1;
 			}
 
-			d2l-dropdown,
+			d2l-dropdown-more,
 			#courseName {
 				margin-left: 2.439%;
 				margin-right: 2.439%;
 			}
 
-			.loading-overlay-shown d2l-dropdown {
+			.loading-overlay-shown d2l-dropdown-more {
 				display: none;
 			}
 
 			@media (min-width: 1230px) {
-				d2l-dropdown {
+				d2l-dropdown-more {
 					margin-left: 30px;
 					margin-right: 30px;
 				}
@@ -95,21 +95,23 @@
 			}
 
 			@media (max-width: 615px) {
-				d2l-dropdown,
+				d2l-dropdown-more,
 				#courseName {
 					margin-left: 15px;
 					margin-right: 15px;
 				}
 			}
 
-			d2l-dropdown {
+			d2l-dropdown-more {
 				padding-bottom: 0;
 				padding-top: 30px;
 				position: absolute;
 				right: 0;
 			}
-
-			:host-context([dir='rtl']) d2l-dropdown {
+			d2l-dropdown-more[hidden] {
+				display: none;
+			}
+			:host-context([dir='rtl']) d2l-dropdown-more {
 				left: 0;
 				right: auto;
 			}
@@ -121,38 +123,6 @@
 
 			#courseName.menu-exists {
 				padding-right: 40px;
-			}
-
-			d2l-dropdown > button {
-				background: rgba(0,0,0,.5);
-				border: none;
-				border-radius: 5px;
-				color: #fff;
-				cursor: pointer;
-				display: flex;
-				float: left;
-				justify-content: center;
-				transition: color .5s,background .5s;
-				height: 35px;
-				width: 35px;
-			}
-
-			d2l-dropdown > button:hover,
-			d2l-dropdown > button:focus {
-				color: rgba(255,255,255,1);
-				background: #006fbf;
-			}
-
-			.elipsis-icon {
-				color: inherit;
-			}
-
-			.elipsis-icon-container {
-				align-items: center;
-				display: flex;
-				height: 100%;
-				justify-content: center;
-				width: 100%;
 			}
 
 			.d2l-image-banner-course-name-container {
